--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@codemirror/lang-javascript": "^6.1.8",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.6",
     "@mui/styled-engine": "^5.12.3",
     "@uiw/react-codemirror": "^4.19.16",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1"
